# arlq

./: .gitignore  AGENTS.md  LICENSE  LICENSE.txt  README-pypi.md  README.ja_JP.md  README.md  arl.py  manual-ja.md  manual.md  pyproject.toml  setup.cfg
arlq/: __init__.py  arlq.py  arlq_curses.py  compat_screen.py  curses_funcs.py  defs.py  pygame_funcs.py
docs/: developer.md
scripts/: run_python_matrix.sh
src/arlq/: __about__.py  __init__.py  arlq.py  balance_search.py  branch_analyzer.py  c_required_probe.py  curses_funcs.py  defs.py  pygame_funcs.py  solver.py  utils.py
