[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arlq"
dynamic = ["version"]
description = "ARQL, another rogue-like quest game."
requires-python = ">=3.10"
license = {text = "BSD 2-Clause License"}
keywords = []
authors = [
  { name = "Toshihiro Kamiya", email = "kamiya@mbj.nifty.com" }
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython"
]
urls = {Homepage = "https://github.com/tos-kamiya/arlq"}
dependencies = [
  'pygame'
]

[project.readme]
file = "README-pypi.md"
content-type = "text/markdown"

[tool.hatch.version]
path = "src/arlq/__about__.py"

[project.gui-scripts]
arlq = "arlq:main"

[project.scripts]
arlq-cli = "arlq:main_cli"
