[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arlq"
dynamic = ["version"]
description = "ARLQ, another rogue-like quest game."
requires-python = ">=3.10"
license = {text = "BSD 2-Clause License"}
keywords = ["game", "roguelike", "pygame", "curses"]
authors = [
  { name = "Toshihiro Kamiya", email = "kamiya@mbj.nifty.com" }
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Games/Entertainment"
]
urls = {
  Homepage = "https://github.com/tos-kamiya/arlq",
  Repository = "https://github.com/tos-kamiya/arlq",
  Issues = "https://github.com/tos-kamiya/arlq/issues",
}
dependencies = [
  "pygame>=2",
]

[project.readme]
file = "README-pypi.md"
content-type = "text/markdown"

[tool.hatch.version]
path = "src/arlq/__about__.py"

[project.gui-scripts]
arlq = "arlq:main"

[project.scripts]
arlq-cli = "arlq:main_cli"
arlq-solver = "arlq.solver:main"
arlq-branch-analyzer = "arlq.branch_analyzer:main"
arlq-balance-search = "arlq.balance_search:main"
