[metadata]
name = arlq
version = attr: arlq._version.__version__
description = ARQL, another rogue-like quest game.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tos-kamiya/arlq
author = Toshihiro Kamiya
author_email = kamiya@mbj.nifty.com
license = BSD 2-Clause License
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows

[options.entry_points]
console_scripts = 
    arlq=arlq:main

[options]
packages = find:
python_requires = >=3.8
install_requires = 
    windows-curses; sys_platform == "win32"
